fix z-index

--- a/src/sass/layout/_header-hero.scss
+++ b/src/sass/layout/_header-hero.scss
@@ -12,6 +12,7 @@
     position: relative;
     height: 100%;
     min-width: 320px;
+    overflow: hidden;
     padding: 8px 20px 0;
     @include mediaInBetween('mobile', 'tablet') {
       max-width: 480px;
@@ -85,6 +86,7 @@
 .header__title {
   display: inline-block;
   position: relative;
+  z-index: 50;
   margin: 0;
   padding: 0;
   margin-bottom: 20px;
@@ -120,6 +122,8 @@
   }
 }
 .header__links {
+  position: relative;
+  z-index: 100;
 }
 .header__link {
   display: inline-block;
@@ -183,6 +187,7 @@
 }
 .header-icecream {
   position: absolute;
+  z-index: 10;
   width: 171px;
   height: 410px;
   top: 92px;
@@ -298,6 +303,8 @@
   }
 }
 .cafes-group__accent-text {
+  position: relative;
+  z-index: 15;
   margin: 0;
   font-family: 'Titan One';
   font-size: 28px;
@@ -308,6 +315,7 @@
   color: getColorFromPalette('accent', 'dark');
   &::after {
     position: absolute;
+    z-index: 10;
     right: -10px;
     top: -2px;
     z-index: 1;
@@ -317,10 +325,12 @@
     border-radius: 50%;
     background-color: getColorFromPalette('primary', 'light');
     @include mediaOver('desktop') {
+      position: absolute;
       width: 30px;
       height: 30px;
       right: -18px;
       top: -4px;
+      z-index: 10;
     }
   }
   @include mediaOver('desktop') {
@@ -357,6 +367,8 @@
   }
 }
 .trucks-group__accent-text {
+  position: relative;
+  z-index: 15;
   margin: 0;
   font-family: 'Titan One';
   font-size: 28px;
@@ -367,6 +379,7 @@
   color: getColorFromPalette('accent', 'dark');
   &::after {
     position: absolute;
+    z-index: 10;
     right: -8px;
     top: -2px;
     z-index: 1;
@@ -376,10 +389,12 @@
     border-radius: 50%;
     background-color: getColorFromPalette('primary', 'light');
     @include mediaOver('desktop') {
+      position: absolute;
       width: 30px;
       height: 30px;
       right: -17px;
       top: -4px;
+      z-index: 10;
     }
   }
   @include mediaOver('desktop') {
